<resources>
    <string name="app_name">GamesP</string>
    <string name="action_settings">Connect</string>
    <string name="section_format">Section: %1$d</string>
    <string name="state_label">STATE:</string>
    <string name="position_label">POSITION: </string>
    <string name="id_label">ID:</string>
    <string name="commands_label">COMMANDS</string>
    <string name="enter_commands_and_send">Enter commands and Send</string>
    <string name="command_forward">F</string>
    <string name="command_left">L</string>
    <string name="command_send">S</string>
    <string name="command_right">R</string>
    <string name="command_back">B</string>
    <string name="command_connect">Connect</string>
    <string name="state_default">not connected yet</string>
    <string name="connect_Button">Connect with Robota</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_loading">Loading</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_select">Select</string>
    <string name="title_activity_1_1_select">Easy</string>
    <string name="title_activity_1_2_select">Medium</string>
    <string name="title_activity_1_3_select">Advanced</string>
    <string name="level1_1">Unit 1 - Easy level</string>
    <string name="level1_2">Unit 1 - Medium level</string>
    <string name="level1_3">Unit 1 - Advanced level</string>
    <string name="bot_name">Robot name: </string>
    <string name="title_activity_unit1">unit1</string>
    <string name="level8_1">Unit 8 - Easy level</string>
    <string name="level8_2">Unit 8 - Medium level</string>
    <string name="level8_3">Unit 8 - Advanced level</string>
    <string name="title_activity_8_1_select">Easy</string>
    <string name="title_activity_8_2_select">Medium</string>
    <string name="title_activity_8_3_select">Advanced</string>
    <string name="intro">MOBILE APP TO INTERACT WITH PHYSICAL ROBOTS FOR INTELLECTUALLY HANDICAPPED PEOPLE</string>
    <string name="info_text_1">The principal objective of the project is to develop an online platform to interact with physical robots or in a virtual community, to implement with them specific teaching units for adults with disabilities. This goal leads offering this group the ability to access a normal activity, such as playing with robots. With this in mind it aims to help to promote the inclusion of disabled people. For this purpose, the consortium counts with experts on this target group.</string>
    <string name="info_text_2">Involve parents in teaching/learning activities to enhance the bond parent – child and strengthen their relationship is also a project purpose. The fact that there is a virtual community also allows playing in pairs. For this reason, physically separated adults could also play in a jointly way.</string>
    <string name="info">About the project</string>
    <string name="map">Map</string>
    <string name="wifi">Wifi Configuration</string>
    <string name="update">Update</string>
    <string name="dificult_1">Easy</string>
    <string name="dificult_2">Medium</string>
    <string name="dificult_3">Advanced</string>
    <string name="title_activity_principal2">Principal2</string>string>
    <string name="unit_1_title">Who am I?</string>
    <string name="unit_2_title">Daily</string>
    <string name="unit_3_title">City</string>
    <string name="unit_4_title">Hobbies</string>
    <string name="unit_5_title">Music</string>
    <string name="unit_6_title">Shopping</string>
    <string name="unit_7_title">Social skills</string>
    <string name="unit_8_title">Sports</string>
    <string name="unit_9_title">Kitchen</string>
    <string name="unit_10_title">Job</string>
    <string name="unit_0_title">Free Mode</string>
    <string name="title_activity_info">Free Mode</string>

</resources>
