<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/control"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@drawable/app_fondo"
    tools:context="com.gamesp.gamesp.unit1_3">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#2E3E4F">
        <TextView android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/level8_3"
            android:textSize="25sp"
            android:textColor="#FFF"
            android:textAlignment="center" />
    </LinearLayout>

        <Space
            android:layout_height="15dp"
            android:layout_width="1dp" />
        <TextView android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/enter_commands_and_send" />
        <Space
            android:layout_height="15dp"
            android:layout_width="1dp" />
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:rowCount="6"
            android:columnCount="3">
            <ImageButton
                android:id="@+id/F"
                android:layout_width="@dimen/sizeBtn"
                android:layout_height="@dimen/sizeBtn"
                android:layout_row="1"
                android:layout_column="1"
                android:background="@android:color/transparent"
                android:src="@drawable/app_n"
                android:contentDescription="@string/command_forward"
                android:onClick="addCommand"
                android:visibility="visible"
                android:scaleType="fitXY"
                android:layout_margin="10dp" />

            <ImageButton
                android:id="@+id/L"
                android:layout_width="@dimen/sizeBtn"
                android:layout_height="@dimen/sizeBtn"
                android:layout_column="0"
                android:layout_margin="10dp"
                android:layout_row="2"
                android:contentDescription="@string/command_left"
                android:background="@android:color/transparent"
                android:onClick="addCommand"
                android:scaleType="fitXY"
                android:src="@drawable/app_w" />

            <ImageButton
                android:id="@+id/S"
                android:layout_width="@dimen/sizeBtn"
                android:layout_height="@dimen/sizeBtn"
                android:adjustViewBounds="false"
                android:background="@android:color/transparent"
                android:layout_margin="10dp"
                android:cropToPadding="false"
                android:onClick="sendCommand"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/buttons_ok" />

            <ImageButton
                android:id="@+id/R"
                android:layout_width="@dimen/sizeBtn"
                android:layout_height="@dimen/sizeBtn"
                android:layout_margin="10dp"
                android:src="@drawable/app_e"
                android:background="@android:color/transparent"
                android:contentDescription="@string/command_right"
                android:onClick="addCommand"
                android:scaleType="fitXY" />

            <ImageButton
                android:id="@+id/B"
                android:layout_width="@dimen/sizeBtn"
                android:layout_height="@dimen/sizeBtn"
                android:layout_row="3"
                android:layout_column="1"
                android:src="@drawable/app_s"
                android:background="@android:color/transparent"
                android:contentDescription="@string/command_back"
                android:onClick="addCommand"
                android:scaleType="fitXY"
                android:layout_margin="10dp"
                />

        </GridLayout>


    <EditText
            android:id="@+id/commands_edit"
            android:layout_width="fill_parent"
            android:layout_height="152dp"
            android:textSize="30dp"
            android:enabled="false" />

   <!-- <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:src="@android:drawable/ic_delete" />-->




    </LinearLayout>