<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/control"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.gamesp.gamesp.unit1_1">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:paddingLeft="0dp"
        android:paddingRight="0dp">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="17dp"
            android:onClick="volver"
            app:srcCompat="@drawable/appgamesp_icono_inicio" />

        <TextView
            android:id="@+id/text5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:text="@string/unit_1_title"
            android:textAlignment="inherit"
            android:textColor="#FFF"
            android:textSize="25sp"
            android:layout_marginLeft="60dp"/>

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="25dp"
            app:srcCompat="@drawable/appgamesp_icono_puntosverticalesdcha" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="10dp"
        android:paddingTop="0dp">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_marginTop="11dp"
            app:srcCompat="@drawable/appgamesp_icono_easy" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:text="@string/dificult_1"
            android:textAlignment="inherit"
            android:textColor="#FFF"
            android:textSize="25sp"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>


    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="3"
        android:rowCount="6">

        <ImageButton
            android:id="@+id/F"
            android:layout_width="@dimen/sizeBtn"
            android:layout_height="@dimen/sizeBtn"
            android:layout_column="1"
            android:layout_margin="10dp"
            android:layout_row="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/command_forward"
            android:onClick="addCommand"
            android:scaleType="fitXY"
            android:src="@drawable/app_n"
            android:visibility="visible" />

        <ImageButton
            android:id="@+id/L"
            android:layout_width="@dimen/sizeBtn"
            android:layout_height="@dimen/sizeBtn"
            android:layout_column="0"
            android:layout_margin="10dp"
            android:layout_row="2"
            android:background="@android:color/transparent"
            android:contentDescription="@string/command_left"
            android:onClick="addCommand"
            android:scaleType="fitXY"
            android:src="@drawable/app_w" />

        <ImageButton
            android:id="@+id/S"
            android:layout_width="@dimen/sizeBtn"
            android:layout_height="@dimen/sizeBtn"
            android:layout_margin="10dp"
            android:adjustViewBounds="false"
            android:background="@android:color/transparent"
            android:cropToPadding="false"
            android:onClick="sendCommand"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/buttons_ok" />

        <ImageButton
            android:id="@+id/R"
            android:layout_width="@dimen/sizeBtn"
            android:layout_height="@dimen/sizeBtn"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/command_right"
            android:onClick="addCommand"
            android:scaleType="fitXY"
            android:src="@drawable/app_e" />

        <ImageButton
            android:id="@+id/B"
            android:layout_width="@dimen/sizeBtn"
            android:layout_height="@dimen/sizeBtn"
            android:layout_column="1"
            android:layout_margin="10dp"
            android:layout_row="3"
            android:background="@android:color/transparent"
            android:contentDescription="@string/command_back"
            android:onClick="addCommand"
            android:scaleType="fitXY"
            android:src="@drawable/app_s" />

    </GridLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <ImageView
            android:id="@+id/imageViewCommands"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:layout_marginTop="0dp"
            app:srcCompat="@drawable/appgamesp_contenedorcomandos" />

        <HorizontalScrollView
            android:id="@+id/horizontalScroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingRight="38dp"
            android:paddingLeft="7dp">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/horizontalCommands"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                android:paddingLeft="0dp"
                android:paddingRight="35dp">

            </LinearLayout>
        </HorizontalScrollView>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/borrar"
            android:layout_width="38dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:onClick="borrar"
            android:layout_alignParentRight="true">

        </LinearLayout>


    </RelativeLayout>

<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:onClick="mapa"
    android:src="@drawable/appgamesp_icono_trespuntos"
    android:layout_marginTop="15dp"/>
    <!--<EditText
        android:id="@+id/commands_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:textSize="30dp" />

     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
         android:src="@android:drawable/ic_delete" />-->


</LinearLayout>