<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/control"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.gamesp.gamesp.info">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:paddingLeft="0dp"
        android:paddingRight="0dp">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="17dp"
            android:onClick="volver"
            app:srcCompat="@drawable/appgamesp_icono_inicio" />

        <TextView
            android:id="@+id/text5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/info"
            android:textAlignment="inherit"
            android:textColor="#FFF"
            android:textSize="25sp" />


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical"
            android:paddingLeft="0dp"
            android:paddingRight="0dp">

            <TextView
                android:id="@+id/txt1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:padding="30dp"
                android:text="@string/info_text_1"
                android:textColor="@color/white"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/txt2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/info_text_2"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/logo_erasmus" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="300dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                app:srcCompat="@drawable/logoxuntaconselleria" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>